# ej200

./: .gitignore  CMakeLists.txt  README.md  main.cc
.claude/: settings.local.json
analysis/: ResolutionScan.C  ResolutionScan_v2.C  SiPMRankingScan.C  SiPMRankingScan_v2.C  TimeMarkScan.C  analyze.py  analyze_dCFD.C  analyze_hits.C  convert_vis_exports.py  merge_runs.py  plot_hits.py  resolution_vs_x.py  resolution_vs_x_fixed.py  resolution_vs_x_root.C  sipm_waveform_dcfd  sipm_waveform_dcfd.cpp  sipm_waveform_dcfd.py
build_codex_check/: CMakeCache.txt.tmpc7c2a
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  Materials.hh  PrimaryGeneratorAction.hh  RunAction.hh  SiPMSD.hh  SteppingAction.hh
macros/: crosscheck_thickness.mac  print_optical_processes.mac  run.mac  run_1000.mac  scan.mac  scan_angle.mac  scan_angle_step.mac  scan_step.mac  test.mac  vis.mac  vis_photon_traces_xz.mac  vis_scan_png.mac  vis_scan_png_lite.mac  vis_scan_png_step.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Materials.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiPMSD.cc  SteppingAction.cc
